<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">


    <ImageView
        android:id="@+id/imagenPrincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        app:srcCompat="@drawable/header"
        android:adjustViewBounds="true"/>

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/marginBasic"
        android:layout_marginStart="@dimen/marginBasic"
        android:layout_below="@id/imagenPrincipal"
        android:text="@string/titulo"
        android:textSize="20dp"/>

    <ImageView
        android:id="@+id/marca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/marginBasic"
        android:layout_alignBottom="@id/titulo"
        android:layout_alignTop="@id/titulo"
        android:layout_alignParentEnd="true"
        app:srcCompat="@drawable/ic_bookmark" />

    <TextView
        android:id="@+id/duracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titulo"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/marginBasic"
        android:text="@string/fechaD" />

    <Button
        android:id="@+id/alquilar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/duracion"
        android:layout_alignStart="@id/titulo"
        android:layout_alignEnd="@id/titulo"
        android:text="@string/alquilar" />

    <Button
        android:id="@+id/comprar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/duracion"
        android:layout_marginStart="8dp"
        android:layout_alignEnd="@id/marca"
        android:layout_alignTop="@id/alquilar"
        android:layout_alignBottom="@id/alquilar"
        android:layout_marginEnd="@dimen/marginBasic"
        android:layout_toEndOf="@id/alquilar"
        android:text="@string/comprar" />

    <View
        android:id="@+id/dividerTop"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/alquilar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:background="?android:attr/listDivider" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/botonF1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dividerTop"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:clickable="true"
        android:layout_alignStart="@id/alquilar"
        app:srcCompat="@drawable/ic_baseline_edit_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/botonF2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_alignTop="@id/botonF1"

        android:layout_marginEnd="20dp"
        android:layout_below="@id/dividerTop"
        android:layout_alignEnd="@id/alquilar"       android:layout_marginStart="@dimen/marginBasic"
        app:srcCompat="@drawable/ic_family" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/botonF3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_below="@id/dividerTop"
        android:layout_alignTop="@id/botonF2"
        android:layout_marginStart="8dp"
        android:layout_alignStart="@id/comprar"
        app:srcCompat="@drawable/tomato" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/botonF4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_below="@id/dividerTop"
        android:layout_alignTop="@id/botonF1"
       android:layout_marginEnd="8dp"
        android:layout_alignEnd="@id/comprar"
        app:srcCompat="@drawable/ic_similar" />

    <TextView
        android:id="@+id/textB1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/botonF1"
        android:layout_marginTop="8dp"
        android:layout_alignParentStart="true"
        android:layout_alignStart="@id/botonF1"
        android:layout_alignEnd="@id/botonF1"
        android:layout_marginStart="10dp"
        android:textSize="10dp"
        android:textAlignment="center"
        android:text="@string/btn1" />

    <TextView
        android:id="@+id/textB2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/botonF2"
        android:layout_alignEnd="@id/botonF2"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:layout_alignStart="@id/botonF2"
        android:text="@string/btn2" />

    <TextView
        android:id="@+id/textB3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/botonF3"
        android:layout_below="@id/botonF3"
        android:layout_alignStart="@id/botonF3"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:text="@string/btn3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/botonF4"
        android:layout_alignStart="@id/botonF4"
        android:layout_marginTop="8dp"
        android:text="@string/btn4"
        android:layout_alignEnd="@id/botonF4"
        android:textAlignment="center"/>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/textB1"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:text="@string/textoFinal"
        android:layout_margin="@dimen/marginBasic"/>

</RelativeLayout>
